<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login fragment -->
    <string name="login_correct">Please enter the correct email and password.</string>

    <!-- welcome fragment -->
    <string name="welcome_text">Welcome Shoes World!!!</string>
    <string name="welcome_discount_text">Would you like to know more discounts?</string>
    <string name="welcome_secure_payment">Secure Payment</string>

    <!-- Instruction Screen -->
    <string name="shoes"> Shoes</string>
    <string name="recommend_shoe">
        We recommended shoes that suit your taste!<br />
        What do you think? Do you like it?</string>
    <string name="save_shoe">Go: go to Shoes List Page</string>
    <string name="go_shoes">If you don\&apos;\t like the shoes we recommended,
        <br />you can see a list of more shoes!</string>

    <!-- Shoe Detail Screen -->
    <string name="shoe_collection">SHOE COLLECTION</string>
    <string name="add_item">Add Item</string>
    <string name="logout">Logout</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company_name">Company Name</string>
    <string name="description">Description</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="collection_title">Shoe Collection</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
