<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".InstructionFragment">

        <TextView
            android:id="@+id/tv_recommend_shoe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_xlarge"
            android:text="@string/recommend_shoe"
            android:gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/iv_recommend_shoe"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/layout_margin_xsmall"
            android:src="@drawable/shoe"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/tv_go_shoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_shoes"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin_default"/>

        <Button
            android:id="@+id/btn_shoes"
            style="@style/ButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:text="@string/save_shoe" />
    </LinearLayout>
</layout>