<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WelcomeFragment">

        <ImageView
            android:id="@+id/iv_ad_shoes"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/layout_margin_xlarge"
            android:scaleType="fitCenter"
            android:src="@drawable/ad_shoes" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_default"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_header"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_xlarge"
            android:text="@string/welcome_discount_text"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_welcome"
            style="@style/ButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:text="@string/welcome_secure_payment" />
    </LinearLayout>
</layout>