<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="shoesViewModel"
            type="com.udacity.shoestore.details.ShoeViewModel" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".details.ShoeDetailsFragment">

        <TextView
            android:id="@+id/tv_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:layout_marginBottom="@dimen/layout_margin_xsmall"
            app:layout_constraintBottom_toTopOf="@+id/tf_shoe_name"
            app:layout_constraintStart_toStartOf="@+id/tf_shoe_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_shoe_name"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            app:layout_constraintVertical_bias="0.2"
            android:hint="@string/shoe_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ef_shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/shoe_name"
                android:text="@={shoe.name}"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_details_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:layout_marginBottom="@dimen/layout_margin_xsmall"
            app:layout_constraintBottom_toTopOf="@+id/tf_shoe_company"
            app:layout_constraintStart_toStartOf="@+id/tf_shoe_company" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_shoe_company"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="@dimen/layout_margin_large"
            android:hint="@string/company_name"
            app:layout_constraintStart_toStartOf="@id/tf_shoe_name"
            app:layout_constraintTop_toBottomOf="@id/tf_shoe_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ef_shoe_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/company_name"
                android:text="@={shoe.company}"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_details_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            android:layout_marginBottom="@dimen/layout_margin_xsmall"
            app:layout_constraintBottom_toTopOf="@+id/tf_shoe_size"
            app:layout_constraintStart_toStartOf="@+id/tf_shoe_size" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_shoe_size"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="@dimen/layout_margin_large"
            android:hint="@string/shoe_size"
            app:layout_constraintStart_toStartOf="@id/tf_shoe_company"
            app:layout_constraintTop_toBottomOf="@id/tf_shoe_company">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ef_shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/shoe_size"
                android:inputType="numberDecimal"
                android:text="@={``+shoe.size}"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginBottom="@dimen/layout_margin_xsmall"
            app:layout_constraintBottom_toTopOf="@+id/tf_shoe_description"
            app:layout_constraintStart_toStartOf="@+id/tf_shoe_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_shoe_description"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="@dimen/layout_margin_large"
            android:hint="@string/description"
            app:layout_constraintStart_toStartOf="@id/tf_shoe_size"
            app:layout_constraintTop_toBottomOf="@id/tf_shoe_size">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ef_shoe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/description"
                android:text="@={shoe.description}"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/btn_save"
            android:text="@string/save"
            android:onClick="@{() -> shoesViewModel.onSaveClick(shoe)}"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
            app:layout_constraintStart_toEndOf="@id/btn_cancel" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ButtonStyle"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="@dimen/layout_margin_large"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>